; ModuleID = '/home/carl/AnghaBench/Craft/deps/lodepng/extr_lodepng.c_addLengthDistance.c'
source_filename = "/home/carl/AnghaBench/Craft/deps/lodepng/extr_lodepng.c_addLengthDistance.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@LENGTHBASE = common dso_local global i64* null, align 8
@DISTANCEBASE = common dso_local global i64* null, align 8
@FIRST_LENGTH_CODE_INDEX = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i64, i64)* @addLengthDistance to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @addLengthDistance(i32* %0, i64 %1, i64 %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i64, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  store i32* %0, i32** %4, align 8
  store i64 %1, i64* %5, align 8
  store i64 %2, i64* %6, align 8
  %11 = load i64*, i64** @LENGTHBASE, align 8
  %12 = load i64, i64* %5, align 8
  %13 = call i32 @searchCodeIndex(i64* %11, i32 29, i64 %12)
  store i32 %13, i32* %7, align 4
  %14 = load i64, i64* %5, align 8
  %15 = load i64*, i64** @LENGTHBASE, align 8
  %16 = load i32, i32* %7, align 4
  %17 = zext i32 %16 to i64
  %18 = getelementptr inbounds i64, i64* %15, i64 %17
  %19 = load i64, i64* %18, align 8
  %20 = sub i64 %14, %19
  %21 = trunc i64 %20 to i32
  store i32 %21, i32* %8, align 4
  %22 = load i64*, i64** @DISTANCEBASE, align 8
  %23 = load i64, i64* %6, align 8
  %24 = call i32 @searchCodeIndex(i64* %22, i32 30, i64 %23)
  store i32 %24, i32* %9, align 4
  %25 = load i64, i64* %6, align 8
  %26 = load i64*, i64** @DISTANCEBASE, align 8
  %27 = load i32, i32* %9, align 4
  %28 = zext i32 %27 to i64
  %29 = getelementptr inbounds i64, i64* %26, i64 %28
  %30 = load i64, i64* %29, align 8
  %31 = sub i64 %25, %30
  %32 = trunc i64 %31 to i32
  store i32 %32, i32* %10, align 4
  %33 = load i32*, i32** %4, align 8
  %34 = load i32, i32* %7, align 4
  %35 = load i32, i32* @FIRST_LENGTH_CODE_INDEX, align 4
  %36 = add i32 %34, %35
  %37 = call i32 @uivector_push_back(i32* %33, i32 %36)
  %38 = load i32*, i32** %4, align 8
  %39 = load i32, i32* %8, align 4
  %40 = call i32 @uivector_push_back(i32* %38, i32 %39)
  %41 = load i32*, i32** %4, align 8
  %42 = load i32, i32* %9, align 4
  %43 = call i32 @uivector_push_back(i32* %41, i32 %42)
  %44 = load i32*, i32** %4, align 8
  %45 = load i32, i32* %10, align 4
  %46 = call i32 @uivector_push_back(i32* %44, i32 %45)
  ret void
}

declare dso_local i32 @searchCodeIndex(i64*, i32, i64) #1

declare dso_local i32 @uivector_push_back(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
